Fix Z-Index

--- a/htdocs/showcase/revcontent-api-showcase-powr-video-1.0/css/powrvideo.scss
+++ b/htdocs/showcase/revcontent-api-showcase-powr-video-1.0/css/powrvideo.scss
@@ -71,7 +71,7 @@ a.rc-video-close {
 
 .rc-float-video {
     position : fixed;
-    z-index : 100;
+    z-index : 100000000000;
     box-shadow: 0px 0px 4px #888888;
 }
 
